<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.licenta_mobile.activity.main.parkingspots.ParkingSpotsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_parking_lot" />

    <fragment
        android:id="@+id/navigation_reservations"
        android:name="com.example.licenta_mobile.activity.main.reservations.ReservationsFragment"
        android:label="@string/title_reservations"
        tools:layout="@layout/fragment_reservation_history" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.licenta_mobile.activity.main.profile.NotificationsFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>